Added 2 new problems